--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ youtube_username: Damian Shorts
 #########################################################################################
 theme: "minima"
 
-rss: rss
+#rss: rss
 
 kramdown:
   syntax_highlighter_opts:
